# bet-back

./: .env.example  .gitignore  ALEMBIC_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  setup.ps1
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 542800be9671_phase1_initial_schema.py  7a1c9f2b3d40_backtest_status_detail.py  ed3b99b61d2a_initial_migration_create_users_table.py
docs/: DATA_MODEL.md  DOMAIN.md  ROADMAP.md
docs/decisions/: ADR-0001-liga-inicial-brasileirao.md  ADR-0002-provedores-de-dados.md  ADR-0003-resolucao-conservadora-de-eventos.md  ADR-0004-fixtures-via-odds-provider.md  ADR-0005-historico-fdcuk-e-aliases.md  ADR-0006-backtest-closing-e-veredito-v1.md  ADR-0007-blend-calibrado-e-line-shopping.md
src/: app.py
src/config/: config.py  logging_config.py  rate_limit.py  security.py  settings.py
src/database/: database.py
src/entities/: user.py
src/jobs/: scheduler.py
src/middlewares/: validate_user_auth_token.py
src/models/: __init__.py  betting.py  competition.py  match.py  odds.py  signals.py  user_model.py
src/providers/: api_football.py  base.py  football_data_co_uk.py  http.py  the_odds_api.py
src/repositories/: base.py  base_repository.py  betting_repository.py  competition_repository.py  match_repository.py  odds_repository.py  prediction_repository.py  user_repository.py
src/routers/: backtests.py  betting.py  health.py  jobs.py  matches.py
tests/: conftest.py  helpers.py
(+48 files in other folders)
