[project]
name = "betting-backend"
version = "0.1.0"
description = "Betting value analysis platform — backend (EV signals, CLV-first)"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 96
extend-exclude = ["alembic/versions"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses calls in argument defaults
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
packages = ["src"]
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = ["src/jobs/*"]
